--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Frederic.</span></h1>
+        <h1>Hi, I am <span class="about__name">Frédéric.</span></h1>
         <h2 class="about__role" id="job-desc">{{BIO[1]["job"]}}.</h2>
         <p class="about__desc">{{BIO[0]['desc']}}</p>
 
