--- a/static/css/admin-styles.css
+++ b/static/css/admin-styles.css
@@ -1,5 +1,5 @@
 html, body {
-    width: 70%;
+    width: 200px;
 }
 
 html {
@@ -14,7 +14,8 @@ body {
 }
 
 #admin-form{
-    width:50%;
+    padding-top:100px;
+    width:200px;
     display: table;
     margin: auto;
     
@@ -24,4 +25,10 @@ body {
     max-width: 200px;
     max-height: 200px;
 }
+a{
+    margin-left:-6px;
+}
+  
+  
+  
 
