--- a/templates/admin.html
+++ b/templates/admin.html
@@ -15,16 +15,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/">Portfolio</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li><a href="/">Main Page</a></li>
-        </ul>
-      </div>
-    </nav>
 
     <form action="/admin" method="POST" id="admin-form">
       <div class="form-group">
@@ -40,11 +30,10 @@
         <label for="pwd">Password:</label>
         <input type="password" class="form-control" id="pwd" name="password" />
       </div>
-      <button type="submit" class="btn btn-default">LogIn</button>
+      <button type="submit" class="btn btn-default">Log In</button>
     </form>
-
     <footer>
-      <a href="/admin/login"><small>Admin </small></a>
+      <a class="navbar-brand" href="/">Back</a>
     </footer>
     <script src="../static/js/script.js"></script>
   </body>
