--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -93,7 +93,7 @@
         </form>
     </div>
 
-    <div class="skills">
+    <div class="skills" id="skills">
         <h1>Skills</h1>
         <p><a href="https://icons8.com" target="_blank">find icons</a></p>
         <ul>
