--- a/static/css/form.css
+++ b/static/css/form.css
@@ -6,8 +6,8 @@
   margin: 10px;
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 5px;
   font-size: 16px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
 }
 
 #contact-form {
@@ -19,11 +19,13 @@
 #contact-form input[type="email"],
 #contact-form input[type="text"],
 #contact-form textarea {
-  width: 40%;
+  width: 50%;
 }
 
 #contact textarea[name="message"] {
-  resize: none; /* added property to disable resizing */
+  resize: vertical;
+  min-height: 200px;
+  /* resize: none; added property to disable resizing */
 }
 
 #contact input[type="submit"] {
