--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
     ></script>
     <link rel="stylesheet" href="../static/css/styles.css" />
     <link rel="stylesheet" href="../static/css/form.css" />
+    <link rel="icon" type="image/x-icon" href="../static/pic/favicon.png">
     <title>Frédéric-Alexandre Lefebvre</title>
   </head>
   <body class="light" id="top">
